租户删除
